# playlink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: demo-guide.md  design.md  goal.md  js-client-api.md  protocol.md  relay-metadata.md  sync-models.md  v0.1-spec.md  v0.2-web-console-spec.md  v0.3-protocol-room-reliability-plan.md  v0.4-lan-host-plan.md  v0.5-js-sdk-example-plan.md  v0.6-js-sdk-stabilization-plan.md  v0.7-relay-groundwork-plan.md  v0.8-observability-plan.md  v0.9-state-sync-prototype-plan.md
examples/js-client/: discover-lan.js  errors.js  idle-timeout.js  mini-game-server.js  mini-game.html  mini-game.js  package.json  playlink-client.js  sdk-demo.js  smoke.js  state-sync.js
scripts/: verify.ps1
src/: admin.rs  discovery.rs  main.rs  protocol.rs  room.rs  session.rs  websocket.rs
web-console/: index.html
web-console/assets/: app.js  style.css
